<resources>
    <string name="app_name">Deus</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Login</string>
    <string name="delete">delete</string>
    <string name="hello">Hello</string>
    <string name="admin">Admin</string>
    <string name="wake">Wake</string>
    <string name="hours_placeholder">14</string>
    <string name="minutes_placeholder">47</string>
    <string name="seconds_placeholder">09</string>
    <string name="hrs">Hrs</string>
    <string name="mins">Mins</string>
    <string name="secs">Secs</string>
    <string name="generate_key_text">Generate Key</string>
</resources>